--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+  --foreground-rgb: 255, 255, 255;
+  --background-rgb: 238, 224, 203;
+  --header-rgb: 175, 198, 216;
+  --section-rgb: 131, 151, 136;
+}
+
 .App {
   text-align: center;
 }
