--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,174 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+
 :root {
   --foreground-rgb: 255, 255, 255;
   --background-rgb: 238, 224, 203;
   --header-rgb: 175, 198, 216;
-  --section-rgb: 131, 151, 136;
+  --section-rgb: 131, 151, 136, 0.7;
 }
 
-.App {
-  text-align: center;
+#root {
+  color: rgb(var(--foreground-rgb));
+  background: rgb(var(--background-rgb));
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header {
+  background: rgb(var(--header-rgb));
+  font-family: "Space Mono", monospace;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main_container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 65vw;
+  margin: auto;
+  min-height: 100vh;
+  row-gap: 1.25rem;
+  margin-top: 4rem;
+  /* background: rgb(209, 197, 179); */
+  /* background: #DCD4C0; */
+  border-radius: 15px;
+  /* box-shadow: #0000003f 0px 0px 10px; */
+  padding: 1.25rem;
+  /* border: 1px inset white; */
+  background: linear-gradient(135deg, rgba(255,255,255,0.1) 0%, rgba(0,0,0,0.1) 100%);
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(2.4px);
+-webkit-backdrop-filter: blur(2.4px);
+animation: myAnim 2s ease 0s 1 normal forwards;
+}
+
+@keyframes myAnim {
+	0% {
+		opacity: 0;
+		transform: translateY(50px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+section {
+  background: rgba(var(--section-rgb));
+  /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.5); */
+  backdrop-filter: blur(8px);
+  border: 2px inset rgba(255, 255, 255, 0.18);
+}
+
+#about_container {
+  display: flex;
+  flex-direction: row;
+  column-gap: 1.25rem;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  background: transparent;
+  border: 0;
+  box-shadow: none;
+  backdrop-filter: none;
+  font-family: "Roboto Mono", monospace;
 }
 
-.App-link {
-  color: #61dafb;
+.about {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  border-radius: 15px 50px 30px;
+  flex: 1 1 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about span {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.italic {
+  font-style: italic;
+ font-size: 24px !important;
+}
+
+.langages {
+  border-radius: 50px 15px 50px 30px;
+  flex: 1 1 50%;
+  display: flex;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  flex-wrap: wrap;
+  column-gap: 5rem;
+  row-gap: 2.5rem;
+  justify-content: center;
+  font-family: "Roboto Mono", monospace;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  color: #000000;
+  text-transform: uppercase;
+}
+
+.langages button {
+  background: transparent;
+  border: 0;
+}
+
+#langagesContainer {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  width: 100%;
+  justify-items: center;
+  padding: 0 10%;
+}
+.langage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 5rem;
+  justify-content: flex-end;
+}
+
+.langage img {
+  width: 5rem;
+}
+
+.about,
+.langages {
+  max-width: 50%;
+  background: rgba(131, 151, 136, 0.7);
+  /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.5); */
+  backdrop-filter: blur(8px);
+  border: 2px inset rgba(255, 255, 255, 0.18);
+}
+
+#arrow_prec,
+#arrow_next {
+  position: absolute;
+}
+
+#arrow_prec {
+  left: 0;
+  top: calc(50% - 20px);
+}
+
+#arrow_next {
+  right: 0;
+  top: calc(50% - 20px);
+}
+
+#description_container {
+  border-radius: 50px;
+  padding: 0 30px;
+}
+.description_p {
+  font-family: "Roboto Mono", monospace;
+  line-height: 2rem;
+}
+#projects_container {
+  display: flex;
+  flex-direction: row;
+  column-gap: 1.25rem;
+  width: 100%;
+  border-radius: 50px 50px 15px 15px;
+  padding: 30px;
+  box-sizing: border-box;
 }
