--- a/src/App.css
+++ b/src/App.css
@@ -26,20 +26,16 @@ header {
   min-height: 100vh;
   row-gap: 1.25rem;
   margin-top: 4rem;
-  /* background: rgb(209, 197, 179); */
-  /* background: #DCD4C0; */
   border-radius: 15px;
-  /* box-shadow: #0000003f 0px 0px 10px; */
   padding: 1.25rem;
-  /* border: 1px inset white; */
   background: linear-gradient(135deg, rgba(255,255,255,0.1) 0%, rgba(0,0,0,0.1) 100%);
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(2.4px);
 -webkit-backdrop-filter: blur(2.4px);
-animation: myAnim 2s ease 0s 1 normal forwards;
+animation: mainEntry 2s ease 0s 1 normal forwards;
 }
 
-@keyframes myAnim {
+@keyframes mainEntry {
 	0% {
 		opacity: 0;
 		transform: translateY(50px);
@@ -52,7 +48,6 @@ animation: myAnim 2s ease 0s 1 normal forwards;
 }
 section {
   background: rgba(var(--section-rgb));
-  /* box-shadow: 0 8px 32px 0 rgba(255, 255, 255, 0.5); */
   backdrop-filter: blur(8px);
   border: 2px inset rgba(255, 255, 255, 0.18);
 }
@@ -158,7 +153,11 @@ section {
 #description_container {
   border-radius: 50px;
   padding: 0 30px;
+  background: linear-gradient(135deg, rgba(255,255,255,0.1) 0%, rgba(0,0,0,0.1) 100%);
+  color: black;
+  border: 1px solid rgba(var(--section-rgb));
 }
+
 .description_p {
   font-family: "Roboto Mono", monospace;
   line-height: 2rem;
